--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
-  text-align: center;
+.rs-drawer-content, .bg-darkgray{
+    background-color: #202020 !important;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.rs-drawer-header .rs-drawer-header-close{
+    color: white;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
+.outfit-100{
+    font-family: "Outfit", sans-serif;
+    font-weight: 100;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.outfit-200{
+    font-family: "Outfit", sans-serif;
+    font-weight: 200;
+}
+.outfit-300{
+    font-family: "Outfit", sans-serif;
+    font-weight: 300;
+}
+.outfit-400{
+    font-family: "Outfit", sans-serif;
+    font-weight: 400;
+}
+.outfit-500{
+    font-family: "Outfit", sans-serif;
+    font-weight: 500;
+}
+.outfit-600{
+    font-family: "Outfit", sans-serif;
+    font-weight: 600;
+}
+.outfit-700{
+    font-family: "Outfit", sans-serif;
+    font-weight: 700;
+}
+.outfit-800{
+    font-family: "Outfit", sans-serif;
+    font-weight: 800;
+}
+.outfit-900{
+    font-family: "Outfit", sans-serif;
+    font-weight: 900;
 }
