--- a/src/App.css
+++ b/src/App.css
@@ -1,46 +1,79 @@
-.rs-drawer-content, .bg-darkgray{
+.rs-drawer-content,
+.bg-darkgray {
     background-color: #202020 !important;
 }
 
-.rs-drawer-header .rs-drawer-header-close{
+.rs-drawer-header .rs-drawer-header-close {
     color: white;
 }
 
 
 
-.outfit-100{
+.outfit-100 {
     font-family: "Outfit", sans-serif;
     font-weight: 100;
 }
-.outfit-200{
+
+.outfit-200 {
     font-family: "Outfit", sans-serif;
     font-weight: 200;
 }
-.outfit-300{
+
+.outfit-300 {
     font-family: "Outfit", sans-serif;
     font-weight: 300;
 }
-.outfit-400{
+
+.outfit-400 {
     font-family: "Outfit", sans-serif;
     font-weight: 400;
 }
-.outfit-500{
+
+.outfit-500 {
     font-family: "Outfit", sans-serif;
     font-weight: 500;
 }
-.outfit-600{
+
+.outfit-600 {
     font-family: "Outfit", sans-serif;
     font-weight: 600;
 }
-.outfit-700{
+
+.outfit-700 {
     font-family: "Outfit", sans-serif;
     font-weight: 700;
 }
-.outfit-800{
+
+.outfit-800 {
     font-family: "Outfit", sans-serif;
     font-weight: 800;
 }
-.outfit-900{
+
+.outfit-900 {
     font-family: "Outfit", sans-serif;
     font-weight: 900;
 }
+
+
+.about-text {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: end;
+}
+
+#homeCv{
+    text-decoration: none;
+    text-decoration-line: none;
+    color: #10BD7B;
+}
+#homeCv:hover{
+    color: #202020;
+}
+#ProBtn{
+    text-decoration: none;
+    text-decoration-line: none;
+    color: none;
+
+}
+
