--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+::selection{
+    color: #202020;
+    background-color: #10BD7B;
+}
+
